name:                traphack
version:             0.0
synopsis:            survival roguelike game
-- description:         
homepage:            https://github.com/green-orange/traphack
-- license:             
license-file:        LICENSE
author:              Khadaev Konstantin
maintainer:          khadaev98@gmail.com
-- copyright:           
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable traphack
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-orphans
  -- other-modules:       
  other-extensions:    CPP
  build-depends:       
                       base       >=4.6
                     , hscurses   >=1.4
                     , random     >=1.1
                     , unix       >=2.7
                     , containers >=0.5
                     , array      >=0.5
                     , time       >=1.5
                     , MissingH   >=1.4
                     , deepseq    >=1.4
  default-language:    Haskell2010
